--- a/main.html
+++ b/main.html
@@ -3,6 +3,26 @@
 <html>
 
 <head>
+
+
+   <button id="openModal">Open Modal</button>
+    
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Modal Header</h2>
+                <span class="close-modal">&times;</span>
+            </div>
+            <div class="modal-body">
+                <p>Modal Body Content</p>
+            </div>
+        </div>
+    </div>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+
+	
 	<link rel="stylesheet" href="styles.css">
 </head>
 
